# korean-license-plate-detector

./: .gitignore  LICENSE  Makefile  README.md  korean-license-plate-detector.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
src/: detect.py  form.ui  ui_form.py  widget.py
src/detector/: models.py  pipeline.py
src/klpd/: __init__.py  cli.py
src/klpd/detector/: __init__.py  models.py  pipeline.py
src/klpd/models/: __init__.py  loader.py  number.py  plate.py  vertex.py
src/klpd/ui/: __init__.py  main_window.py
src/klpd/ui/resources/: form.ui
src/klpd/utils/: __init__.py  data_loader.py
src/klpd/utils/data/: kor_list.txt
src/utils/: data_loader.py  model_loader.py  number_detector.py  plate_detector.py
src/utils/data/: splitter.py  transform_json_into_txt.py  transfrom_mat_into_txt.py
src/utils/debug/: __init__.py
tests/: __init__.py  test_detector.py
train/: train_plate_detector.ipynb  train_text_detector.ipynb  train_vertex_detector.ipynb
train/content/dataset/: labels.cache  splitter.py
